# NadeoEventAPIWrapper

./: .gitignore  README.md  actual.json  expected.json  failed.json
nadeo_event_api/: .pre-commit-config.yaml  README.md  expected.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
nadeo_event_api/src/: MANIFEST.in
nadeo_event_api/src/api/club/: campaign.py
nadeo_event_api/src/api/structure/: maps.py  settings.py
nadeo_event_api/src/api/structure/round/: match_spot.py  spot_structure.py
nadeo_event_api/src/components/: bracket_event.py
nadeo_event_api/src/nadeo_event_api/: constants.py  environment.py  utils.py
nadeo_event_api/src/nadeo_event_api/api/: authenticate.py  endpoints.py  enums.py  event_api.py
nadeo_event_api/src/nadeo_event_api/api/club/: campaign.py  club.py
nadeo_event_api/src/nadeo_event_api/api/discord/: webhook.py
nadeo_event_api/src/nadeo_event_api/api/pastebin/: pastebin_api.py
nadeo_event_api/src/nadeo_event_api/api/pastefy/: pastefy_api.py
nadeo_event_api/src/nadeo_event_api/api/pastesio/: pastesio_api.py
nadeo_event_api/src/nadeo_event_api/api/structure/: enums.py  event.py  settings.py
nadeo_event_api/src/nadeo_event_api/components/: bracket_round.py  enums.py
nadeo_event_api/src/nadeo_event_api/components/single_elim/: single_elim_bracket_event.py  (+1 more)
nadeo_event_api/test/: test_utils.py
nadeo_event_api/test/api/: utils_for_test.py
nadeo_event_api/test/api/club/: test_campaign.py
nadeo_event_api/test/api/structure/: test_event.py
nadeo_event_api/test/objects/inbound/: test_match_results.py
(+39 files in other folders)
