[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nadeo-event-api"
version = "0.0.1"
authors = [
  { name="Nixotica", email="nixotica@gmail.com" },
]
description = "A python wrapper for the Nadeo Event Creation API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'nadeo_event_api.objects.outbound.pastebin' = ["pastebin_2v2_template.json"]
